css/sateekStyles.css
* {
    margin: 0px;
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

.mainContainer {
    padding: 10px;
}

.header > * {
    margin: 10px;
}
.header > input[type=text] {
    width: 50%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}
.header > button {
    background-color: #4CAF50;
    color: white;
    padding: 13px 20px;
    margin: 8px 10px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}
.header > button:hover {
    background-color: #45a049;
}

.container {
    margin-top: 20px;
    padding: 10px;
    display: grid;
    grid-template-columns: repeat(auto-fit, 200px);
    grid-auto-rows: 250px;
    grid-auto-flow: dense;
    grid-gap: 7px;
    justify-content: space-evenly;
}

/* Grid Item */
.container_gridItem {
    box-shadow: rgba(0, 0, 0, 0.336) 2px 2px 3px;
    height: 250px;
    cursor: pointer;
}

/* User */
.container_gridItem_userContainer {
    height: 20%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding-left: 5%;
}

.container_gridItem_userContainer table {
    width: 100%;
}

.userImg {
    width: 40px;
    height: 40px;
    background-size: cover;
    background-position: center center;
}

.userName {
    padding-left: 10px;
}

/* Image container */
.imgContainer {
    width: 100%;
    height: 65%;    
    background-size: cover;
    background-position: center center;
    position: relative;
}

/* Image Expand Button and its animation */
.imgContainer .imgContainerExpandImgButton {
    width: 25px;
    height: 25px;
    position: absolute;
    right: 0px;
    margin: 8px;
    background-image: url('../img/expand_icon.png');
    background-size: cover;
    background-position: center center;
    border-radius: 50%;
    display: none;
}

.imgContainer:hover .imgContainerExpandImgButton {
    display: block;
}

.imgContainer .imgContainerExpandImgButton:hover {
    width: 30px;
    height: 30px;
    margin: 6px;
}

/* Footer */
.container_gridItem_footer {
    width: 100%;
    height: 15%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding-left: 5%;
}


/* Likes */
.container_gridItem_footer .likes {
    height: 20px;
    width: 50px;
    position: relative;
}

.container_gridItem_footer .likes .likeImgContainer {
    width: 20px;
    height: 20px;
    background-image: url("../img/thumbs_up.png");
    background-size: cover;
    background-position: center;
    display: inline-block;
}

.likes span {
    font-size: 0.7em;
    position: absolute;
    transform: translate(0, -40%);
    top: 50%;
    left: 22px;
}

/* Downloads */
.container_gridItem_footer .downloads {
    height: 20px;
    width: 50px;
    position: relative;
}

.container_gridItem_footer .downloads .downloadImgContainer {
    width: 20px;
    height: 20px;
    background-image: url("../img/downloads.png");
    background-size: cover;
    background-position: center;
    display: inline-block;
}

.downloads span {
    font-size: 0.7em;
    position: absolute;
    transform: translate(0, -40%);
    top: 50%;
    left: 22px;
}


/* image modal */
.expandedImageModal {
    position: fixed;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 1;
    background: #000000d8;
    display: none;
    align-items: center;
    justify-content: center;
}

.expandedImageModal img {
    width: 80%;
    display: block;
    
}

/* Modal appear animation */
/* Add Animation */
.expandedImageModal img {    
    -webkit-animation-name: zoom;
    -webkit-animation-duration: 0.6s;
    animation-name: zoom;
    animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
    from {-webkit-transform:scale(0)} 
    to {-webkit-transform:scale(1)}
}

@keyframes zoom {
    from {transform:scale(0)} 
    to {transform:scale(1)}
}

/* Image modal close button */
.close {
    position: absolute;
    top: 15px;
    right: 35px;
    color: #f1f1f1;
    font-size: 40px;
    font-weight: bold;
    transition: 0.3s;
}

.close:hover,
.close:focus {
    color: #bbb;
    text-decoration: none;
    cursor: pointer;
}

